# login-bot_Python_Implementation

./: README.md
login bot/: login_auto.py
login bot python/: exe1.bat
login bot python/googletest-template/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
login bot python/googletest-template/lib/: INSTALL.vcxproj.filters
login bot python/googletest-template/lib/simple/: INSTALL.vcxproj  Parallelogram.cpp  cmake_install.cmake  simple.vcxproj  simple.vcxproj.filters
login bot python/googletest-template/test/: CMakeLists.txt  INSTALL.vcxproj  cmake_install.cmake  runAllTests.vcxproj.filters
login bot python/googletest-template/test/gtest/: INSTALL.vcxproj  googletest-distribution.sln
login bot python/googletest-template/test/gtest/googlemock/: ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj.filters  gmock_main.vcxproj.filters
login bot python/googletest-template/test/gtest/googletest/: INSTALL.vcxproj.filters  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
login bot/googletest-template/: INSTALL.vcxproj  google-test-exercise.sln
login bot/googletest-template/lib/: INSTALL.vcxproj  cmake_install.cmake
login bot/googletest-template/lib/simple/: CMakeLists.txt  (+2 more)
login bot/googletest-template/test/: CTestTestfile.cmake  Dummy.cpp  INSTALL.vcxproj.filters  runAllTests.vcxproj
powershell auto bot/: Use_test.ps1  exe.bat  include_login_bot.ps1
(+17 files in other folders)
